--- a/MduiBlazor.Shared/Pages/Examples/Menus/MenuPosition.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Menus/MenuPosition.razor
@@ -11,7 +11,7 @@
 </MduiField>
 
 <div style="width: 100%;display:flex;justify-content:center;">
-    <MduiMenu Title="Menu" Icon="more_vert" Color="@Colors.Theme.Accent" Position="@position" AlignEnd="@alignEnd">
+    <MduiMenu Icon="more_vert" Color="@Colors.Theme.Accent" Position="@position" AlignEnd="@alignEnd">
         <MduiMenuItem>Help & feedback</MduiMenuItem>
         <MduiMenuItem Disabled>Settings</MduiMenuItem>
         <MduiDivider />
