--- a/MduiBlazor/Components/Menu/MduiMenuItem.razor
+++ b/MduiBlazor/Components/Menu/MduiMenuItem.razor
@@ -1,7 +1,7 @@
 ﻿@namespace MduiBlazor
 @inherits MduiComponentBase
 
-<li class="@Classname" style="@Style" disabled="@Disabled" @onclick="@OnClick" @attributes="@AdditionalAttributes">
+<li class="@Classname" style="@Style" disabled="@Disabled" @onclick="@OnItemClicked" @attributes="@AdditionalAttributes">
     <a href="@Href" target="@Target">
         @ChildContent
         @if (!string.IsNullOrWhiteSpace(HelperText))
