--- a/MduiBlazor.Shared/Shared/MainLayout.razor
+++ b/MduiBlazor.Shared/Shared/MainLayout.razor
@@ -18,7 +18,7 @@
                     <MduiIconButton Icon="color_lens" OnClick="@ToggleThemeDialog" />
                 </MduiTooltip>
                 <MduiTooltip Position="@Position.Bottom" Message="查看 Github">
-                    <MduiIconButton Href="https://github.com/gaofen13/mdui-blazor">
+                    <MduiIconButton Href="https://github.com/gaofen13/mdui-blazor" Target="_blank">
                         <svg class="mdui-icon" viewBox="0 0 36 36">
                             <path fill-rule="evenodd" clip-rule="evenodd" fill="#ffffff"
                                 d="M18,1.4C9,1.4,1.7,8.7,1.7,17.7c0,7.2,4.7,13.3,11.1,15.5c0.8,0.1,1.1-0.4,1.1-0.8c0-0.4,0-1.4,0-2.8c-4.5,1-5.5-2.2-5.5-2.2c-0.7-1.9-1.8-2.4-1.8-2.4c-1.5-1,0.1-1,0.1-1c1.6,0.1,2.5,1.7,2.5,1.7c1.5,2.5,3.8,1.8,4.7,1.4c0.1-1.1,0.6-1.8,1-2.2c-3.6-0.4-7.4-1.8-7.4-8.1c0-1.8,0.6-3.2,1.7-4.4c-0.2-0.4-0.7-2.1,0.2-4.3c0,0,1.4-0.4,4.5,1.7c1.3-0.4,2.7-0.5,4.1-0.5c1.4,0,2.8,0.2,4.1,0.5c3.1-2.1,4.5-1.7,4.5-1.7c0.9,2.2,0.3,3.9,0.2,4.3c1,1.1,1.7,2.6,1.7,4.4c0,6.3-3.8,7.6-7.4,8c0.6,0.5,1.1,1.5,1.1,3c0,2.2,0,3.9,0,4.5c0,0.4,0.3,0.9,1.1,0.8c6.5-2.2,11.1-8.3,11.1-15.5C34.3,8.7,27,1.4,18,1.4z">
@@ -29,22 +29,17 @@
             }
             else
             {
-                <MduiMenu AlignEnd>
-                    <ActivatorContent>
-                        <MduiIconButton Icon="more_vert" />
-                    </ActivatorContent>
-                    <ChildContent>
-                        <MduiMenuItem OnClick="@ToggleThemeDialog" HelperText="设置主题">
-                            <MduiIcon Icon="color_lens" />
-                        </MduiMenuItem>
-                        <MduiMenuItem Href="https://github.com/gaofen13/mdui-blazor" Target="_blank" HelperText="查看 Github">
-                            <svg class="mdui-icon" width="24" height="24" viewBox="0 0 36 36">
-                                <path fill-rule="evenodd" clip-rule="evenodd"
-                                    d="M18,1.4C9,1.4,1.7,8.7,1.7,17.7c0,7.2,4.7,13.3,11.1,15.5c0.8,0.1,1.1-0.4,1.1-0.8c0-0.4,0-1.4,0-2.8c-4.5,1-5.5-2.2-5.5-2.2c-0.7-1.9-1.8-2.4-1.8-2.4c-1.5-1,0.1-1,0.1-1c1.6,0.1,2.5,1.7,2.5,1.7c1.5,2.5,3.8,1.8,4.7,1.4c0.1-1.1,0.6-1.8,1-2.2c-3.6-0.4-7.4-1.8-7.4-8.1c0-1.8,0.6-3.2,1.7-4.4c-0.2-0.4-0.7-2.1,0.2-4.3c0,0,1.4-0.4,4.5,1.7c1.3-0.4,2.7-0.5,4.1-0.5c1.4,0,2.8,0.2,4.1,0.5c3.1-2.1,4.5-1.7,4.5-1.7c0.9,2.2,0.3,3.9,0.2,4.3c1,1.1,1.7,2.6,1.7,4.4c0,6.3-3.8,7.6-7.4,8c0.6,0.5,1.1,1.5,1.1,3c0,2.2,0,3.9,0,4.5c0,0.4,0.3,0.9,1.1,0.8c6.5-2.2,11.1-8.3,11.1-15.5C34.3,8.7,27,1.4,18,1.4z">
-                                </path>
-                            </svg>
-                        </MduiMenuItem>
-                    </ChildContent>
+                <MduiMenu Icon="more_vert" AlignEnd>
+                    <MduiMenuItem OnClick="@ToggleThemeDialog" HelperText="设置主题">
+                        <MduiIcon Icon="color_lens" />
+                    </MduiMenuItem>
+                    <MduiMenuItem Href="https://github.com/gaofen13/mdui-blazor" Target="_blank" HelperText="查看 Github">
+                        <svg class="mdui-icon" width="24" height="24" viewBox="0 0 36 36">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M18,1.4C9,1.4,1.7,8.7,1.7,17.7c0,7.2,4.7,13.3,11.1,15.5c0.8,0.1,1.1-0.4,1.1-0.8c0-0.4,0-1.4,0-2.8c-4.5,1-5.5-2.2-5.5-2.2c-0.7-1.9-1.8-2.4-1.8-2.4c-1.5-1,0.1-1,0.1-1c1.6,0.1,2.5,1.7,2.5,1.7c1.5,2.5,3.8,1.8,4.7,1.4c0.1-1.1,0.6-1.8,1-2.2c-3.6-0.4-7.4-1.8-7.4-8.1c0-1.8,0.6-3.2,1.7-4.4c-0.2-0.4-0.7-2.1,0.2-4.3c0,0,1.4-0.4,4.5,1.7c1.3-0.4,2.7-0.5,4.1-0.5c1.4,0,2.8,0.2,4.1,0.5c3.1-2.1,4.5-1.7,4.5-1.7c0.9,2.2,0.3,3.9,0.2,4.3c1,1.1,1.7,2.6,1.7,4.4c0,6.3-3.8,7.6-7.4,8c0.6,0.5,1.1,1.5,1.1,3c0,2.2,0,3.9,0,4.5c0,0.4,0.3,0.9,1.1,0.8c6.5-2.2,11.1-8.3,11.1-15.5C34.3,8.7,27,1.4,18,1.4z">
+                            </path>
+                        </svg>
+                    </MduiMenuItem>
                 </MduiMenu>
             }
         </MduiToolbar>
