fix supporting autodarktheme

--- a/MduiBlazor.Shared/Pages/Examples/Layout/DarkThemeLayout.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Layout/DarkThemeLayout.razor
@@ -1,3 +1,7 @@
-<MduiLayout IsDarkTheme>
+<MduiLayout DarkThemeMode="@themeMode">
     ...
 </MduiLayout>
+
+@code{
+    DarkThemeMode themeMode = DarkThemeMode.Auto;
+}
