--- a/MduiBlazor/wwwroot/css/mdui.css
+++ b/MduiBlazor/wwwroot/css/mdui.css
@@ -1,6 +1,6 @@
 /*!
- * mdui 1.0.2 (https://mdui.org)
- * Copyright 2016-2023 zdhxiong
+ * mdui 1.0.2 (https://gaofen13.github.io/mdui-blazor)
+ * Copyright 2022-2023 gaofen13
  * Licensed under MIT
  *//*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
