fix demo autodarktheme

--- a/MduiBlazor.Shared/Pages/LayoutPage.razor
+++ b/MduiBlazor.Shared/Pages/LayoutPage.razor
@@ -90,7 +90,9 @@
      <ExampleSection HideExample Component="@typeof(ThemeColorLayout)" />
 
      <MduiText Typo="@Typo.subheading"><b>暗黑主题</b></MduiText>
-     <p class="mdui-typo">通过对<code>MduiLayout</code>组件参数<code>IsDarkTheme</code>设置为<code>true</code>，对组件下的所有子组件应用暗黑主题。
+     <p class="mdui-typo">通过对<code>MduiLayout</code>组件参数<code>DarkThemeMode</code>设置为<code>DarkThemeMode.Dark</code>，对组件下的所有子组件应用暗黑主题。
+     </p>
+     <p class="mdui-typo">通过对<code>MduiLayout</code>组件参数<code>DarkThemeMode</code>设置为<code>DarkThemeMode.Auto</code>，使组件下的所有子组件随浏览器应用主题。
      </p>
      <ExampleSection HideExample Component="@typeof(DarkThemeLayout)" />
  </div>
