--- a/MduiBlazor.Shared/Pages/ClassesPage.razor.css
+++ b/MduiBlazor.Shared/Pages/ClassesPage.razor.css
@@ -23,6 +23,20 @@
     background-color: #424242;
 }
 
+@media (prefers-color-scheme: dark) {
+
+    .mdui-theme-layout-auto #p-c ::deep .example-demo .mdui-float-left,
+    .mdui-theme-layout-auto #p-c ::deep .example-demo .mdui-float-right,
+    .mdui-theme-layout-auto #p-c ::deep .example-demo .mdui-center,
+    .mdui-theme-layout-auto #p-c ::deep .example-demo .mdui-valign,
+    .mdui-theme-layout-auto #p-c ::deep .example-demo .mdui-text-left,
+    .mdui-theme-layout-auto #p-c ::deep .example-demo .mdui-text-center,
+    .mdui-theme-layout-auto #p-c ::deep .example-demo .mdui-text-right,
+    .mdui-theme-layout-auto #p-c ::deep .example-demo .mdui-clearfix {
+        background-color: #424242;
+    }
+}
+
 #p-c ::deep .example-demo .mdui-clearfix .mdui-float-left,
 #p-c ::deep .example-demo .mdui-clearfix .mdui-float-right {
     background-color: #c5cae9;
@@ -31,6 +45,14 @@
 .mdui-theme-layout-dark #p-c ::deep .example-demo .mdui-clearfix .mdui-float-left,
 .mdui-theme-layout-dark #p-c ::deep .example-demo .mdui-clearfix .mdui-float-right {
     background-color: #616161;
+}
+
+@media (prefers-color-scheme: dark) {
+
+    .mdui-theme-layout-auto #p-c ::deep .example-demo .mdui-clearfix .mdui-float-left,
+    .mdui-theme-layout-auto #p-c ::deep .example-demo .mdui-clearfix .mdui-float-right {
+        background-color: #616161;
+    }
 }
 
 #p-c ::deep .mdui-row>.mdui-col {
@@ -45,6 +67,14 @@
     border-color: #757575;
 }
 
+@media (prefers-color-scheme: dark) {
+
+    .mdui-theme-layout-auto #p-c ::deep .mdui-row>.mdui-col {
+        background-color: #424242;
+        border-color: #757575;
+    }
+}
+
 #p-c table .is-hidden,
 #p-c .mdui-row .is-hidden {
     background-color: initial !important;
@@ -55,6 +85,14 @@
 .mdui-theme-layout-dark #p-c table .is-hidden,
 .mdui-theme-layout-dark #p-c .mdui-row .is-hidden {
     color: #9e9e9e !important;
+}
+
+@media (prefers-color-scheme: dark) {
+
+    .mdui-theme-layout-auto #p-c table .is-hidden,
+    .mdui-theme-layout-auto #p-c .mdui-row .is-hidden {
+        color: #9e9e9e !important;
+    }
 }
 
 #p-c table .is-visible,
@@ -68,4 +106,13 @@
 .mdui-theme-layout-dark #p-c .mdui-row .is-visible {
     background-color: #424242 !important;
     color: #c8e6c9 !important;
+}
+
+@media (prefers-color-scheme: dark) {
+
+    .mdui-theme-layout-auto #p-c table .is-visible,
+    .mdui-theme-layout-auto #p-c .mdui-row .is-visible {
+        background-color: #424242 !important;
+        color: #c8e6c9 !important;
+    }
 }
