--- a/MduiBlazor.Shared/Pages/IconsPage.razor
+++ b/MduiBlazor.Shared/Pages/IconsPage.razor
@@ -35,7 +35,7 @@
         <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">第三方图标</MduiText>
     </h2>
 
-    <p class="mdui-typo">要使用第三方图标库，需要先引入第三方图标库的 CSS 文件。然后在<code>MduiIcon</code>、<code>MduiIconButton</code>等含有图标的组件中设置<code>Custom</code>或<code>CustomIcon</code>参数为<code>true</code>。下面的实例使用的是 <a href="http://ionicons.com" target="_blank">ionicons</a> 的图标。</p>
+    <p class="mdui-typo">要使用第三方图标库，需要先引入第三方图标库的 CSS 文件。然后在<code>MduiIcon</code>、<code>MduiIconButton</code>等含有图标的组件中设置<code>Custom</code>参数为<code>true</code>。下面的实例使用的是 <a href="http://ionicons.com" target="_blank">ionicons</a> 的图标。</p>
     <ExampleSection Component="@typeof(ThirdIcons)" />
 </div>
 
