--- a/MduiBlazor.Shared/Pages/ClassesPage.razor
+++ b/MduiBlazor.Shared/Pages/ClassesPage.razor
@@ -75,7 +75,7 @@
             <li><code>.mdui-float-right</code>使元素向右浮动</li>
         </ul>
     </MduiText>
-    <div class="mdui-clearfix">
+    <div class="example-float">
         <ExampleSection Component="@typeof(FloatClass)" />
     </div>
 
@@ -393,23 +393,23 @@
     <div class="mdui-center mdui-shadow-@shadowValue" id="example-shadow" style="width: 200px;height: 123.6px;"></div>
     <MduiSlider Min="0" Max="24" Discrete @bind-Value="@shadowValue" />
 
-     <div class="mdui-m-t-4">
-         <MduiText Typo="@Typo.subheading"><b>鼠标悬浮时加深阴影</b></MduiText>
-     </div>
-     <p class="mdui-typo">在任何元素上添加类<code>.mdui-hoverable</code>，就能在鼠标悬浮时使阴影加深。</p>
-     <ExampleSection Component="@typeof(SimpleCard)" />
+    <div class="mdui-m-t-4">
+        <MduiText Typo="@Typo.subheading"><b>鼠标悬浮时加深阴影</b></MduiText>
+    </div>
+    <p class="mdui-typo">在任何元素上添加类<code>.mdui-hoverable</code>，就能在鼠标悬浮时使阴影加深。</p>
+    <ExampleSection Component="@typeof(SimpleCard)" />
 
-     <MduiDivider Class="mdui-m-y-5" />
+    <MduiDivider Class="mdui-m-y-5" />
 
-     <h2 id="ripple">
-         <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">涟漪动画效果</MduiText>
-     </h2>
-     <p>添加涟漪动画效果后，会在点击元素时，产生向外扩散的水波纹效果。</p>
+    <h2 id="ripple">
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">涟漪动画效果</MduiText>
+    </h2>
+    <p>添加涟漪动画效果后，会在点击元素时，产生向外扩散的水波纹效果。</p>
 
-     <div class="mdui-m-t-4">
-         <MduiText Typo="@Typo.subheading"><b>调用方式</b></MduiText>
-     </div>
-     <MduiText UseMduiTypo>
+    <div class="mdui-m-t-4">
+        <MduiText Typo="@Typo.subheading"><b>调用方式</b></MduiText>
+    </div>
+    <MduiText UseMduiTypo>
         <ol>
             <li><code>MduiButton</code><code>MduiIconButton</code><code>MduiListItem</code><code>MduiNavMenuItem</code><code>MduiTabItem</code>等组件默认带有涟漪动画效果，如果需要禁用，只需要设置<code>DisableRipple</code>参数为<code>true</code>。
             </li>
