--- a/MduiBlazor.Shared/Pages/Examples/Classes/CenterClass.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Classes/CenterClass.razor
@@ -1,1 +1,1 @@
-<div class="mdui-center" style="width: 200px">mdui-center</div>
+<div class="mdui-center" style="width: fit-content">mdui-center</div>
