--- a/MduiBlazor.Shared/Pages/SelectControlPage.razor
+++ b/MduiBlazor.Shared/Pages/SelectControlPage.razor
@@ -2,10 +2,10 @@
 @inherits BasePage
 @using MduiBlazor.Shared.Pages.Examples.SelectControls
 
-<PageTitle>下拉选择</PageTitle>
+<PageTitle>选择控件</PageTitle>
 <div class="mdui-m-y-5">
-    <MduiText Typo="@Typo.display1" TextColor="@Colors.Theme.Primary">下拉选择</MduiText>
-    <p>下拉选择可以让用户在多个选项之间进行选择。</p>
+    <MduiText Typo="@Typo.display1" TextColor="@Colors.Theme.Primary">选择控件</MduiText>
+    <p>选择控件包括复选框、单选框和开/关切换。</p>
 </div>
 
 <PageContent>
