--- a/MduiBlazor/Components/Pagination/MduiPagination.razor
+++ b/MduiBlazor/Components/Pagination/MduiPagination.razor
@@ -1,7 +1,7 @@
 ﻿@namespace MduiBlazor
 @inherits MduiComponentBase
 
-<MduiButtonGroup OnSwipe="@OnSwipe" Class="@Class" Style="@Style" AdditionalAttributes="@AdditionalAttributes">
+<MduiButtonGroup Class="@Class" Style="@Style" AdditionalAttributes="@AdditionalAttributes">
     <MduiButton Disabled="@PrevDisabled" OnClick="@OnClickPrev">
         &lt;
     </MduiButton>
