--- a/MduiBlazor/Components/Button/MduiButtonGroup.razor
+++ b/MduiBlazor/Components/Button/MduiButtonGroup.razor
@@ -1,6 +1,6 @@
 ﻿@namespace MduiBlazor
 @inherits MduiComponentBase
 
-<MduiSwipeArea OnSwipe="@OnSwipe" class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
+<div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
     @ChildContent
-</MduiSwipeArea>
+</div>
