update slider component

--- a/MduiBlazor.Shared/Pages/Examples/Sliders/DisabledSlider.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Sliders/DisabledSlider.razor
@@ -1,2 +1,4 @@
 <MduiSlider Disabled Step="0.1" Min="0" Max="100" />
-<MduiSlider Disabled Discrete Min="0" Max="100" />
+<MduiSlider Disabled Step="0.1" Min="0" Max="100" Value="10" />
+<MduiSlider Disabled NoLabel Min="0" Max="100" />
+<MduiSlider Disabled NoLabel Min="0" Max="100" Value="10" />
