--- a/MduiBlazor.Shared/Pages/SliderPage.razor
+++ b/MduiBlazor.Shared/Pages/SliderPage.razor
@@ -77,12 +77,12 @@
                  </tr>
                  <tr>
                      <td>
-                         <code>Discrete</code>
+                         <code>NoLabel</code>
                      </td>
                      <td>
                          <code>bool</code>
                      </td>
-                     <td>是否间续滑块，默认<code>false</code>。</td>
+                     <td>隐藏值的显示，默认<code>false</code>。</td>
                  </tr>
              </tbody>
          </MduiSimpleTable>
