fix slider style

--- a/mdui/src/components/slider/index.less
+++ b/mdui/src/components/slider/index.less
@@ -83,7 +83,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #4c4c4c;
+    background-color: #5e5e5e;
     border-radius: 50%;
     transform: scale(0);
     opacity: 0.3;
@@ -216,13 +216,6 @@ input[type="range"]:not(:disabled):hover {
       transform: translate(-50%) rotate(-45deg) scale(1);
     }
   }
-
-  /* 滑块值为 0 */
-  &.mdui-slider-zero {
-    .mdui-slider-thumb::after {
-      border-color: @slider-light-color-focus;
-    }
-  }
 }
 
 /* 禁用状态 */
@@ -286,7 +279,7 @@ input[type="range"]:not(:disabled):hover {
   }
 
   .mdui-slider-thumb::before {
-    background-color: #9e9e9e;
+    background-color: #dedede;
   }
 
   // 鼠标按下状态
